--- a/final_model_render_fixed.ipynb
+++ b/final_model_render_fixed.ipynb
@@ -338,7 +338,7 @@
         "    base = applications.MobileNetV2(weights='imagenet', include_top=False, input_shape=input_shape)\n",
         "    base.trainable=False\n",
         "    x = layers.GlobalAveragePooling2D()(base.output)\n",
-        "    # \ud83d\udfe1 CHANGE THIS: add L2 and lower dropout to reduce underfitting\n",
+        "    #  add L2 and lower dropout to reduce underfitting\n",
         "    x = layers.Dense(128, activation='relu',\n",
         "                     kernel_regularizer=regularizers.l2(WEIGHT_DECAY))(x)\n",
         "    x = layers.Dropout(0.2)(x)\n",
@@ -533,7 +533,7 @@
         "    else:\n",
         "        print(f\"Training {name} - head first, then fine-tune\")\n",
         "        # ---- Head training (base already frozen in builders) ----\n",
-        "        # \ud83d\udd35 NEW LINE: train initial head with existing compile in builder\n",
+        "        #  train initial head with existing compile in builder\n",
         "        cb_head = [\n",
         "            callbacks.ModelCheckpoint(os.path.join(OUT_ROOT, f'{name}_head_best.h5'), save_best_only=True, monitor='val_accuracy', mode='max'),\n",
         "            callbacks.ReduceLROnPlateau(monitor='val_loss', factor=0.5, patience=3, verbose=1),\n",
@@ -545,9 +545,9 @@
         "        model.save(os.path.join(OUT_ROOT, f'{name}_head.h5'))\n",
         "\n",
         "        # ---- Fine-tune: unfreeze top layers ----\n",
-        "        # \ud83d\udd35 NEW BLOCK: unfreeze last UNFREEZE_AT layers of the base (if model has .layers and includes a pretrained base)\n",
-        "        # \ud83d\udfe1 CHANGE THIS: how many layers to unfreeze (tune if needed)\n",
-        "        UNFREEZE_AT = 100   # \ud83d\udfe1 CHANGE THIS (number of layers from end to unfreeze)\n",
+        "        # unfreeze last UNFREEZE_AT layers of the base (if model has .layers and includes a pretrained base)\n",
+        "        # how many layers to unfreeze (tune if needed)\n",
+        "        UNFREEZE_AT = 100   #  (number of layers from end to unfreeze)\n",
         "        # set UNFREEZE_AT=None to unfreeze all layers\n",
         "        # Try to detect base model layers: often layer names include 'mobilenet'/'resnet' etc.\n",
         "        try:\n",
@@ -567,11 +567,11 @@
         "                        trainable_count += 1\n",
         "                    else:\n",
         "                        layer.trainable = False\n",
-        "            # \ud83d\udd35 NEW LINE: recompile with a lower lr for fine-tuning\n",
+        "            # recompile with a lower lr for fine-tuning\n",
         "            model.compile(optimizer=optimizers.Adam(FINE_TUNE_LR_TF),\n",
         "                          loss='sparse_categorical_crossentropy',\n",
         "                          metrics=['accuracy'])\n",
-        "            # \ud83d\udd35 NEW LINE: fine-tune\n",
+        "            #  fine-tune\n",
         "            hist_ft = model.fit(train_ds_tf, validation_data=val_ds_tf,\n",
         "                                epochs=EPOCHS_TF + FINE_TUNE_EPOCHS_TF,\n",
         "                                initial_epoch=hist_head.epoch[-1] + 1 if hasattr(hist_head, 'epoch') and len(hist_head.epoch)>0 else 0,\n",
@@ -583,7 +583,7 @@
         "                                verbose=2)\n",
         "            histories[name] = hist_ft\n",
         "            trained_classifiers[name] = model\n",
-        "            # \ud83d\udd35 NEW LINE: save final finetuned model\n",
+        "            #  save final finetuned model\n",
         "            model.save(os.path.join(OUT_ROOT, f'{name}_finetuned.h5'))\n",
         "        except Exception as e:\n",
         "            print(\"Warning: fine-tuning step failed for\", name, \" \u2014 skipping fine-tune. Error:\", e)\n",
