--- a/final_model_render_fixed.ipynb
+++ b/final_model_render_fixed.ipynb
@@ -520,8 +520,8 @@
         "        inputs = base.input\n",
         "        x = base.output\n",
         "        x = layers.Dense(256, activation='relu',\n",
-        "                         kernel_regularizer=regularizers.l2(WEIGHT_DECAY))(x)   # \ud83d\udd35 NEW LINE: add L2\n",
-        "        x = layers.Dropout(0.2)(x)  # \ud83d\udfe1 CHANGE THIS (lower dropout)\n",
+        "                         kernel_regularizer=regularizers.l2(WEIGHT_DECAY))(x)   # add L2\n",
+        "        x = layers.Dropout(0.2)(x)  #  (lower dropout)\n",
         "        out = layers.Dense(num_classes, activation='softmax')(x)\n",
         "        clf = Model(inputs, out)\n",
         "        clf.compile(optimizer=optimizers.Adam(LR_TF), loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
