--- a/final_model_render_fixed.ipynb
+++ b/final_model_render_fixed.ipynb
@@ -2450,7 +2450,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# \ud83d\udd35 NEW: Replacement Grad-CAM function that RETURNS overlays, paths, preds\n",
+        "# anothetr method for  Grad-CAM function that RETURNS overlays, paths, preds\n",
         "# Paste this cell into your notebook to replace the old save_gradcam_grid_pytorch OR keep it as a new function.\n",
         "\n",
         "import cv2, math, os\n",
